/*
 * $Id: ChangeLog,v 1.2948 2004/05/17 21:31:23 lf_sfnet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-17 23:23 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed Blockify to NOT process an already CodeBlock <exp>.

    /*
       Clipper does NOT Blockify list of <exp,...> if FIRST exp is a CodeBlock.
       I believe this is a BUG, but the situation itslef is very odd, and this may
       very well have been a known issue that was not worth addressing. So I did not
       address it either.
    */

2004-05-17 23:30 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
   * source/rtl/teditor.prg
     * replaced ReadInsert with SET( _SET_INSERT ) to avoid "implicit"
       inclusion of getsys.prg.

2004-05-17 16:15 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
   * include/thread.h
   * source/vm/thread.c
     * simplified OS/2 thread support. doesn't use Terekhov algorithm anymore, solved all
       identified problems up to now. Talks with Giancarlo Niccolai let me suppose there still could
       be something to do, we will see... :)
   * utils/hbtest/rt_ccall.prg
     ! fixed to compile when HB_LONG_LONG_OFF is defined. Fix provided by Przemyslaw Czerpak.

2004-05-17 15:20 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/debugger.prg
    ! Fixed an error in EXIT procedures when exiting the debugger via Alt-X.

2004-05-17 13:50 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/tbrwtext.prg
    ! A hack to enforce normal cursor setting in code window.

2004-05-16 23:10 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/philes.c
    * Reverted last commit for Cl*pper compatibility

2004-05-16 21:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
    ! Fixed compilation of <BEGIN SEQUENCE, END> when no RECOVER USING is used.